--- a/to try/create elem/index.html
+++ b/to try/create elem/index.html
@@ -5,9 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .btn-block {
+            background-color: #ccc;
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
     <div class="box"></div>
+    
+
+    <div class="btn-block">
+        <button class="blue some">1</button>
+        <button>2</button>
+        <button>3</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
